--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@ header{
 }
 .header-section{
     width: 96%;
-    height: 87.5vh;
+    height: 89vh;
     margin: 50px 2%;
     background: #161616;
     border-radius: 30px;
@@ -35,6 +35,7 @@ header{
 .header-details{
     padding-top: 111px;
     padding-bottom: 111px;
+    width: 50%;
 }
 .header-title{
     width: 531px;
@@ -65,6 +66,7 @@ header{
     height: 23px;
     transition: background-color 0.5s ease-out;
 }
+
 /* for transition of button color */
 .btn:hover{
     background-color: #DD0000;
@@ -77,12 +79,12 @@ header{
     margin-left: 10px;
     transition: margin-left 2s ease-out;
 }
-.header-image{
-
+ .header-image{
+    width: 50%;
     margin-top: 100px;
 }
 .header-image img{
-    width: 450px;
+    width: 83%;
     height: auto;
     margin: 0;
 }
@@ -237,3 +239,161 @@ main{
     color: white;
 }
 /* ---------------------------------------------------------------- */
+
+/* -----------------------------------------------------------------
+                                Responsive For Mobile
+-------------------------------------------------------------------- */
+        @media screen and (max-width:576px) {
+            .header-section{
+                height: 107vh;
+                width: 90%;
+                margin-left: 5%;
+                margin-right: 5%;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                padding-left: 0;
+                padding-right: 0;
+            }
+            .header-details{
+                padding-top: 10vh;
+                padding-bottom: 0;
+                width: 100%;
+                margin-bottom: -80px;
+            }
+            .header-title{
+                text-align: center;
+                margin-left: 20%;
+                width: 60%;
+                font-weight: 700;
+                font-size: 1.5em;
+                line-height: 1em;
+                color: #FFFFFF;
+                margin-bottom: 20px;
+            }
+            .header-info{
+                font-weight: 400;
+                width: 60%;
+                margin-left: 20%;
+                font-size: 0.6em;
+                color: #FFFFFF;
+                text-align: center;
+                margin-top: -180px;
+                margin-bottom: 80px;
+
+            }
+            .btn{
+                margin-left: 29%;
+                /* margin-right: 29%; */
+                
+            }
+            .btn:hover .fa-angle-right{
+                margin-left: 50px;
+            }
+            .btn .fa-angle-right{
+                transition: margin-left 2s ease-out;
+            }
+            .header-image img{
+                width: 140%;
+                margin:0 auto;
+            }
+/*------------------ for main section ---------------------------*/
+        main{
+        /* border: 1px solid; */
+            margin-top: 10px;
+            display: flex;
+            justify-content: center;
+        }
+        .mid-section{
+            width: 100%;
+            /* border: 1px solid; */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            row-gap: 12px;
+            margin-left: 0;
+            margin-right: 0;
+            margin-bottom: 20px;
+        }
+        .nav-section{
+            /* border: 2px solid; */
+            background: white;
+            border-radius: 10px;
+            display: grid;
+            grid-template-columns: repeat(1,1fr);
+            align-items: center;
+        }
+
+        .nav-btn{
+            text-decoration: none;
+            background-color: #FFFFFF;
+            border: 2px solid #E8E8E8;
+            color: #161616;
+            border-radius: 10px;
+            width: 100%;
+            height: 100%;
+            margin: 0 auto;
+            text-align: center;
+            padding-top: 17px;
+        }
+        .articles{
+            /* border: 1px solid; */
+            display: grid;
+            grid-template-columns: repeat(1,1fr);
+            align-items: center;
+            justify-content: center;
+            row-gap: 12px;
+
+        }
+        
+         /*-------------------For show which button is checked--------------*/
+            .checked{
+                background-color: #289228;
+                color: white;
+            }
+         /*---------------------------------------------------------------- */
+
+
+         /*-------------------------- for footer--------------------------- */
+         .footer-section{
+            height: 600px;
+         }
+        .footer-title{
+            width: 95px;
+            height: 60px;
+            font-weight: 600;
+            font-size: 40px;
+            line-height: 60px;
+            color: #FFFFFF;
+            margin-bottom: 50px;
+        }
+        .footer-section hr{
+            width: 80%;
+        }
+        .general-links{
+            width: 65%;
+            display: grid;
+            grid-template-columns: repeat(1,1fr);
+            row-gap: 30px;
+            margin-bottom: 50px;
+        }
+        .general-links a{
+            text-decoration: none;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 24px;
+            color: #B9B9B9;
+            text-align: center;
+            
+        }
+        .social-links a{
+            text-decoration: none;
+            font-weight: 500;
+            font-size: 24px;
+            line-height: 24px;
+            color: #B9B9B9;
+            padding: 0 10px;
+        }
+        }
+/* ----------------------------------------------------------------- */
