--- a/styles/style.css
+++ b/styles/style.css
@@ -137,6 +137,7 @@ main{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap: 12px;
+    margin-bottom: 20px;
 }
 .article{
     border: 1px solid #E8E8E8;
@@ -187,6 +188,7 @@ main{
                              footer style 
 ---------------------------------------------------------------------*/
 .footer-section{
+    margin-top: 20px;
     height: 444px;
     background-color: #161616;
     display: flex;
@@ -233,6 +235,12 @@ main{
     color: #B9B9B9;
     padding: 0 10px;
 }
+/*-------------------- special button for tablet -------------------*/
+.tablet-btn{
+   display: none;
+}
+/* ---------------------------------------------------------------- */
+
 /*-------------------For show which button is checked--------------*/
 .checked{
     background-color: #289228;
@@ -245,7 +253,7 @@ main{
 -------------------------------------------------------------------- */
         @media screen and (max-width:576px) {
             .header-section{
-                height: 107vh;
+                height: 85%;
                 width: 90%;
                 margin-left: 5%;
                 margin-right: 5%;
@@ -396,4 +404,163 @@ main{
             padding: 0 10px;
         }
         }
+/* ----------------------------------------------------------------- */
+/* -----------------------------------------------------------------
+                                Responsive For Tablets
+-------------------------------------------------------------------- */
+@media screen and (min-width:577px) and (max-width:992px) {
+
+    .header-section{
+        height: 85%;
+        width: 90%;
+        margin-left: 5%;
+        margin-right: 5%;
+        justify-content: space-evenly;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    .header-details{
+        padding-top: 10vh;
+        padding-bottom: 0;
+        width: 100%;
+        margin-bottom: -80px;
+    }
+    .header-title{
+      
+        width: 60%;
+        font-weight: 700;
+        font-size: 1.5em;
+        line-height: 1em;
+        color: #FFFFFF;
+        margin-bottom: 20px;
+    }
+    .header-info{
+        font-weight: 400;
+        width: 60%;
+        font-size: 0.6em;
+        color: #FFFFFF;
+        margin-top: -180px;
+        margin-bottom: 80px;
+
+    }
+    .btn:hover .fa-angle-right{
+        margin-left: 50px;
+    }
+    .btn .fa-angle-right{
+        transition: margin-left 2s ease-out;
+    }
+    .header-image img{
+        width: 140%;
+        margin-left: -30%;
+    }
+    /*------------------ for main section ---------------------------*/
+    main{
+    /* border: 1px solid; */
+        margin-top: 10px;
+        display: flex;
+        justify-content: center;
+    }
+    .mid-section{
+        width: 100%;
+        /* border: 1px solid; */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        row-gap: 12px;
+        margin-left: 0;
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+    .nav-section{
+        /* border: 2px solid; */
+        background: white;
+        width: 100%;
+        height: 64px;
+        border-radius: 10px;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 50px;
+    }
+
+    .nav-btn{
+        text-decoration: none;
+        background-color: #FFFFFF;
+        border: 2px solid #E8E8E8;
+        color: #161616;
+        border-radius: 10px;
+        width: 30%;
+        height: 64px;
+        margin: 0 auto;
+        text-align: center;
+    }
+    .articles{
+        /* border: 1px solid; */
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        align-items: center;
+        justify-content: center;
+        row-gap: 12px;
+        /* margin: 0 auto; */
+
+    }
+    .article:last-of-type{
+        display: none;
+    }
+
+    .tablet-btn{
+        display: block;
+    }
+
+    /*-------------------For show which button is checked--------------*/
+        .checked{
+            background-color: #289228;
+            color: white;
+        }
+    /*---------------------------------------------------------------- */
+
+
+    /*-------------------------- for footer--------------------------- */
+    .footer-section{
+        height: 600px;
+    }
+    .footer-title{
+        width: 95px;
+        height: 60px;
+        font-weight: 600;
+        font-size: 40px;
+        line-height: 60px;
+        color: #FFFFFF;
+        margin-bottom: 50px;
+    }
+    .footer-section hr{
+        width: 80%;
+    }
+    .general-links{
+        width: 65%;
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        row-gap: 30px;
+        margin-bottom: 50px;
+    }
+    .general-links a{
+        text-decoration: none;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 24px;
+        color: #B9B9B9;
+        text-align: center;
+        
+    }
+    .social-links a{
+        text-decoration: none;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 24px;
+        color: #B9B9B9;
+        padding: 0 10px;
+    }
+    
+}
 /* ----------------------------------------------------------------- */
